[metadata]
name = librfap
author = alexcoder04
url = https://github.com/alexcoder04/librfap
project_urls =
    Code = https://github.com/alexcoder04/librfap
    Issue tracker = https://github.com/alexcoder04/librfap/issues

description = python client library for rfap
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPLv3
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Utilities
keywords = rfap

[options]
packages = find:
